# vscode-testing

./: CMakeLists.txt  Makefile
src/: main.cpp
src/shared/lib/: Game.cpp  Game.h  defines.h
